labs/lab4/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab4
  labels:
    purpose: cka
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab4-client
  labels:
    purpose: cka-client
