labs/lab4/20-rbac-broken.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-tester
  namespace: lab4
  labels:
    app: rbac-tester
spec:
  serviceAccountName: api-reader
  containers:
    - name: kubectl
      image: bitnami/kubectl:1.30.2
      command: ["sh", "-lc"]
      args:
        - |
          while true; do
            echo "[$(date)] === kubectl get services -n lab4 ===";
            kubectl get services -n lab4 || echo "FAIL list services";
            sleep 10;
          done
